--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="viewport" content="width=500; text/html; charset=utf-8" http-equiv="Content-Type">
   <link href="stylesheet.css" rel="stylesheet" type="text/css">
   <link rel="icon" type="image/png" href="images/logo.png">
-  <title>Hoang Pham @ OSU</title>
+  <title>Thai-Hoang Pham @ OSU</title>
   <meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
   <link href='https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 </head>
