--- a/index.html
+++ b/index.html
@@ -64,21 +64,6 @@
 
           <tr onmouseout="porlight_stop()" onmouseover="porlight_start()">
             <td valign="middle" width="100%">
-              <a href="https://doi.org/10.1101/2021.12.13.472490">
-                <papertitle>Chemical-induced Gene Expression Ranking and its Application to Pancreatic Cancer Drug Repurposing</papertitle>
-              </a>
-              <br>
-              <strong>Thai-Hoang Pham</strong>, Yue Qiu, Jiahui Liu, Steven Zimmer, Eric O'Neill, Lei Xie, Ping Zhang
-              <br>
-              <em>Patterns</em> (To appear)
-              <br>
-              <a href="https://github.com/pth1993/CIGER">code</a>
-              <br>
-            </td>
-          </tr>
-
-          <tr onmouseout="porlight_stop()" onmouseover="porlight_start()">
-            <td valign="middle" width="100%">
               <a href="https://doi.org/10.1101/2022.01.21.477292">
                 <papertitle>FAME: Fragment-based Conditional Molecular Generation for Phenotypic Drug Discovery</papertitle>
               </a>
@@ -88,6 +73,21 @@
               <em>SDM</em> 2022 (To appear)
               <br>
               <a href="https://github.com/pth1993/FAME">code</a>
+              <br>
+            </td>
+          </tr>
+          
+          <tr onmouseout="porlight_stop()" onmouseover="porlight_start()">
+            <td valign="middle" width="100%">
+              <a href="https://www.cell.com/patterns/fulltext/S2666-3899(22)00014-9">
+                <papertitle>Chemical-induced Gene Expression Ranking and its Application to Pancreatic Cancer Drug Repurposing</papertitle>
+              </a>
+              <br>
+              <strong>Thai-Hoang Pham</strong>, Yue Qiu, Jiahui Liu, Steven Zimmer, Eric O'Neill, Lei Xie, Ping Zhang
+              <br>
+              <em>Patterns</em>
+              <br>
+              <a href="https://github.com/pth1993/CIGER">code</a>
               <br>
             </td>
           </tr>
@@ -157,7 +157,7 @@
                 <papertitle>Building a Spoonerism Detection System for Vietnamese</papertitle>
               </a>
               <br>
-              Khai Mai*, <strong>Thai-Hoang Pham</strong>*, Xuan-Khoai Pham
+              <strong>Thai-Hoang Pham</strong>, Xuan-Khoai Pham
               <br>
               <em>PACLIC</em> 2018
               <br>
@@ -224,6 +224,34 @@
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
           <tr>
             <td width="100%" valign="middle">
+              <heading>Awards</heading>
+              <p>
+                SIAM student travel award, SDM 2022.
+              </p>
+              <p>
+                Vietnam Education Foundation 2.0 Scholarship, 2018.
+              </p>
+              <p>
+                Valedictorian, FPT University, 2015
+              <p>
+                The most excellent student, FPT University, 2013. 
+              </p>
+              <p>
+                Excellent student, FPT University, 2012-2015
+              </p>
+              <p>
+                Second prize in 21st Vietnam Student Mathematical Olympiad, 2013.
+              </p>
+              <p>
+                Full scholarship for talented student, FPT University, 2011-2015.
+              </p>
+            </td>
+          </tr>
+        </table>
+          
+        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
+          <tr>
+            <td width="100%" valign="middle">
               <heading>Services</heading>
               <p>
                 Conference sub reviewer: AAAI, IJCAI, KDD, ICDM, SDM, ICML, ICLR, NeurIPS.
@@ -233,6 +261,9 @@
               </p>
               <p>
                 Journal reviewer: Bioinformatics, Scientific Reports.
+              </p>
+              <p>
+                Workshop reviewer: XAI-Health.
               </p>
             </td>
           </tr>
