--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 
           <tr onmouseout="porlight_stop()" onmouseover="porlight_start()">
             <td valign="middle" width="100%">
-              <a href="https://doi.org/10.1101/2022.01.21.477292">
+              <a href="https://epubs.siam.org/doi/epdf/10.1137/1.9781611977172.81">
                 <papertitle>FAME: Fragment-based Conditional Molecular Generation for Phenotypic Drug Discovery</papertitle>
               </a>
               <br>
               <strong>Thai-Hoang Pham</strong>, Lei Xie, Ping Zhang
               <br>
-              <em>SDM</em> 2022 (To appear)
+              <em>SDM</em> 2022
               <br>
               <a href="https://github.com/pth1993/FAME">code</a>
               <br>
@@ -100,7 +100,7 @@
               <br>
               <strong>Thai-Hoang Pham</strong>, Changchang Yin, Laxmi Mehta, Xueru Zhang, Ping Zhang
               <br>
-              <em>ICDM</em> 2021
+              <em>ICDM</em> 2021 (<strong>Best paper candidate</strong>)
               <br>
               <a href="https://github.com/pth1993/MuViTaNet">code</a>
               <br>
