--- a/index.html
+++ b/index.html
@@ -229,7 +229,13 @@
                 SIAM student travel award, SDM 2022.
               </p>
               <p>
+                Best paper candidate, SDM 2022.
+              </p>
+              <p>
                 Vietnam Education Foundation 2.0 Scholarship, 2018.
+              </p>
+              <p>
+                Best paper candidate, IALP 2016.
               </p>
               <p>
                 Valedictorian, FPT University, 2015
