--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 SIAM student travel award, SDM 2022.
               </p>
               <p>
-                Best paper candidate, SDM 2022.
+                Best paper candidate, ICDM 2021.
               </p>
               <p>
                 Vietnam Education Foundation 2.0 Scholarship, 2018.
