--- a/index.html
+++ b/index.html
@@ -260,16 +260,19 @@
             <td width="100%" valign="middle">
               <heading>Services</heading>
               <p>
+                Advisory Board member: Heliyon.
+              </p>
+              <p>
+                Program Committee member: XAI-Health 2022, ICDM 2022, SDM 2023, AISTATS 2023.
+              </p>
+              <p>
+                Journal reviewer: Bioinformatics, Scientific Reports, Artificial Intelligence in Medicine, IEEE Journal of Biomedical and Health Informatics.
+              </p>
+              <p>
                 Conference sub reviewer: AAAI, IJCAI, KDD, ICDM, SDM, ICML, ICLR, NeurIPS.
               </p>
               <p>
                 Journal sub reviewer: Pattern Recognition.
-              </p>
-              <p>
-                Journal reviewer: Bioinformatics, Scientific Reports.
-              </p>
-              <p>
-                Workshop reviewer: XAI-Health.
               </p>
             </td>
           </tr>
