--- a/index.html
+++ b/index.html
@@ -61,6 +61,36 @@
               <heading>Selected Publications</heading>
             </td>
           </tr>
+          
+          <tr onmouseout="porlight_stop()" onmouseover="porlight_start()">
+            <td valign="middle" width="100%">
+              <a href="https://pth1993.github.io">
+                <papertitle>A Fair and Interpretable Network for Clinical Risk Prediction: A Regularized Multi-view Multi-task Learning Approach</papertitle>
+              </a>
+              <br>
+              <strong>Thai-Hoang Pham</strong>, Changchang Yin, Laxmi Mehta, Xueru Zhang, Ping Zhang
+              <br>
+              <em>Knowledge and Information Systems</em>
+              <br>
+              <a href="https://github.com/pth1993/MuViTaNet">code</a>
+              <br>
+            </td>
+          </tr>
+          
+          <tr onmouseout="porlight_stop()" onmouseover="porlight_start()">
+            <td valign="middle" width="100%">
+              <a href="https://pth1993.github.io">
+                <papertitle>DREAM: Domain Invariant and Contrastive Representation for Sleep Dynamics</papertitle>
+              </a>
+              <br>
+              Seungyeon Lee*, <strong>Thai-Hoang Pham</strong>*, Ping Zhang
+              <br>
+              <em>ICDM</em> 2022
+              <br>
+              <a href="https://pth1993.github.io">code</a>
+              <br>
+            </td>
+          </tr>
 
           <tr onmouseout="porlight_stop()" onmouseover="porlight_start()">
             <td valign="middle" width="100%">
