--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           
           <tr onmouseout="porlight_stop()" onmouseover="porlight_start()">
             <td valign="middle" width="100%">
-              <a href="https://pth1993.github.io">
+              <a href="https://link.springer.com/article/10.1007/s10115-022-01813-2">
                 <papertitle>A Fair and Interpretable Network for Clinical Risk Prediction: A Regularized Multi-view Multi-task Learning Approach</papertitle>
               </a>
               <br>
