--- a/index.html
+++ b/index.html
@@ -58,7 +58,22 @@
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
           <tr>
             <td width="100%" valign="middle">
-              <heading>Selected Publications</heading>
+              <heading>Selected Publications (*equal contributions)</heading>
+            </td>
+          </tr>
+          
+           <tr onmouseout="porlight_stop()" onmouseover="porlight_start()">
+            <td valign="middle" width="100%">
+              <a href="https://openreview.net/forum?id=jBEXnEMdNOL">
+                <papertitle>Fairness and Accuracy under Domain Generalization</papertitle>
+              </a>
+              <br>
+              <strong>Thai-Hoang Pham</strong>, Xueru Zhang, Ping Zhang
+              <br>
+              <em>ICLR</em> 2023
+              <br>
+              <a href="https://pth1993.github.io">code</a>
+              <br>
             </td>
           </tr>
           
@@ -293,10 +308,10 @@
                 Advisory Board member: Heliyon.
               </p>
               <p>
-                Program Committee member: XAI-Health 2022, ICDM 2022, SDM 2023, AISTATS 2023.
+                Program Committee member: KDD 2023, IJCAI 2023, AISTATS 2023, SDM 2023, ICDM 2022, XAI-Health 2022.
               </p>
               <p>
-                Journal reviewer: Bioinformatics, Scientific Reports, Artificial Intelligence in Medicine, IEEE Journal of Biomedical and Health Informatics.
+                Journal reviewer: Heliyon, Bioinformatics, Scientific Reports, Artificial Intelligence in Medicine, IEEE Journal of Biomedical and Health Informatics.
               </p>
               <p>
                 Conference sub reviewer: AAAI, IJCAI, KDD, ICDM, SDM, ICML, ICLR, NeurIPS.
