--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           
            <tr onmouseout="porlight_stop()" onmouseover="porlight_start()">
             <td valign="middle" width="100%">
-              <a href="https://openreview.net/forum?id=jBEXnEMdNOL">
+              <a href="https://arxiv.org/pdf/2301.13323.pdf">
                 <papertitle>Fairness and Accuracy under Domain Generalization</papertitle>
               </a>
               <br>
@@ -270,6 +270,9 @@
           <tr>
             <td width="100%" valign="middle">
               <heading>Awards</heading>
+              <p>
+                Top reviewer, AISTATS 2023.
+              </p>
               <p>
                 SIAM student travel award, SDM 2022.
               </p>
