--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <p align="center">
                 <name>Thai-Hoang Pham</name>
               </p>
-              <p>I am a fourth-year PhD student at <a href="https://cse.osu.edu/"> Department of Computer Science and Engineering, The Ohio State University (OSU)</a> supervised by Prof. <a href="https://web.cse.ohio-state.edu/~zhang.10631/">Ping Zhang</a>. Before coming to OSU, I received my bachelor's degree from FPT University, where I was supervised by Dr. <a href="http://mim.hus.vnu.edu.vn/en/staff/phuonglh">Phuong Le-Hong</a>.
+              <p>I am a fifth-year PhD student at <a href="https://cse.osu.edu/"> Department of Computer Science and Engineering, The Ohio State University (OSU)</a> supervised by Prof. <a href="https://web.cse.ohio-state.edu/~zhang.10631/">Ping Zhang</a>. Before coming to OSU, I received my bachelor's degree from FPT University, where I was supervised by Dr. <a href="http://mim.hus.vnu.edu.vn/en/staff/phuonglh">Phuong Le-Hong</a>.
               </p>
               <p> Email: pham dot 375 at osu dot edu
               <p align=left>
@@ -70,7 +70,7 @@
               <br>
               <strong>Thai-Hoang Pham</strong>, Xueru Zhang, Ping Zhang
               <br>
-              <em>ICLR</em> 2023
+              <em>ICLR</em> 2023 <span style="color: red;">(CORE Rank A*)</span>
               <br>
               <a href="https://pth1993.github.io">code</a>
               <br>
