--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               <br>
               Seungyeon Lee*, <strong>Thai-Hoang Pham</strong>*, Ping Zhang
               <br>
-              <em>ICDM</em> 2022
+              <em>ICDM</em> 2022 <span style="color: red;">(CORE Rank A*)</span>
               <br>
               <a href="https://pth1993.github.io">code</a>
               <br>
@@ -115,7 +115,7 @@
               <br>
               <strong>Thai-Hoang Pham</strong>, Lei Xie, Ping Zhang
               <br>
-              <em>SDM</em> 2022
+              <em>SDM</em> 2022 <span style="color: red;">(CORE Rank A)</span>
               <br>
               <a href="https://github.com/pth1993/FAME">code</a>
               <br>
@@ -145,7 +145,7 @@
               <br>
               <strong>Thai-Hoang Pham</strong>, Changchang Yin, Laxmi Mehta, Xueru Zhang, Ping Zhang
               <br>
-              <em>ICDM</em> 2021 (<strong>Best paper candidate</strong>)
+              <em>ICDM</em> 2021 <span style="color: red;">(CORE Rank A*)</span> (<strong>Best paper candidate</strong>)
               <br>
               <a href="https://github.com/pth1993/MuViTaNet">code</a>
               <br>
@@ -190,77 +190,7 @@
               <br>
               Khai Mai*, <strong>Thai-Hoang Pham</strong>*, Minh Trung Nguyen, Tuan Duc Nguyen, Danushka Bollegala, Ryohei Sasano, Satoshi Sekine
               <br>
-              <em>COLING</em> 2018
-              <br>
-              <br>
-            </td>
-          </tr>
-
-          <tr onmouseout="porlight_stop()" onmouseover="porlight_start()">
-            <td valign="middle" width="100%">
-              <a href="https://www.aclweb.org/anthology/Y18-1063.pdf">
-                <papertitle>Building a Spoonerism Detection System for Vietnamese</papertitle>
-              </a>
-              <br>
-              <strong>Thai-Hoang Pham</strong>, Xuan-Khoai Pham
-              <br>
-              <em>PACLIC</em> 2018
-              <br>
-              <br>
-            </td>
-          </tr>
-
-          <tr onmouseout="porlight_stop()" onmouseover="porlight_start()">
-            <td valign="middle" width="100%">
-              <a href="https://www.aclweb.org/anthology/P17-4007.pdf">
-                <papertitle>Extended named entity recognition api and its applications in language education</papertitle>
-              </a>
-              <br>
-              Tuan Duc Nguyen, Khai Mai, <strong>Thai-Hoang Pham</strong>, Minh Trung Nguyen, Truc-Vien T Nguyen, Takashi Eguchi, Ryohei Sasano, Satoshi Sekine
-              <br>
-              <em>ACL (System Demonstrations)</em> 2017
-              <br>
-              <br>
-            </td>
-          </tr>
-
-          <tr onmouseout="porlight_stop()" onmouseover="porlight_start()">
-            <td valign="middle" width="100%">
-              <a href="https://arxiv.org/pdf/1708.07241.pdf">
-                <papertitle>Nnvlp: A neural network-based vietnamese language processing toolkit</papertitle>
-              </a>
-              <br>
-              <strong>Thai-Hoang Pham</strong>, Xuan-Khoai Pham, Tuan-Anh Nguyen, Phuong Le-Hong
-              <br>
-              <em>IJCNLP (System Demonstrations)</em> 2017
-              <br>
-              <br>
-            </td>
-          </tr>
-
-          <tr onmouseout="porlight_stop()" onmouseover="porlight_start()">
-            <td valign="middle" width="100%">
-              <a href="https://arxiv.org/pdf/1705.04044">
-                <papertitle>End-to-end recurrent neural network models for vietnamese named entity recognition: Word-level vs. character-level</papertitle>
-              </a>
-              <br>
-              <strong>Thai-Hoang Pham</strong>, Phuong Le-Hong
-              <br>
-              <em>PACLING</em> 2017
-              <br>
-              <br>
-            </td>
-          </tr>
-
-          <tr onmouseout="porlight_stop()" onmouseover="porlight_start()">
-            <td valign="middle" width="100%">
-              <a href="https://arxiv.org/pdf/1705.10610">
-                <papertitle>The importance of automatic syntactic features in vietnamese named entity recognition</papertitle>
-              </a>
-              <br>
-              <strong>Thai-Hoang Pham</strong>, Phuong Le-Hong
-              <br>
-              <em>PACLIC</em> 2017
+              <em>COLING</em> 2018 <span style="color: red;">(CORE Rank A)</span>
               <br>
               <br>
             </td>
