--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               <br>
               <strong>Thai-Hoang Pham</strong>, Yue Qiu, Jucheng Zeng, Lei Xie, Ping Zhang
               <br>
-              <em>Nature Machine Intelligence</em>
+              <em>Nature Machine Intelligence</em> <span style="color: red;">(Impact factor: 25.898)</span>
               <br>
               <a href="https://github.com/pth1993/DeepCE">code</a>
               <br>
