--- a/index.html
+++ b/index.html
@@ -219,6 +219,20 @@
               <br>
             </td>
           </tr>
+          
+          <tr onmouseout="porlight_stop()" onmouseover="porlight_start()">
+            <td valign="middle" width="100%">
+              <a href="https://www.aclweb.org/anthology/P17-4007.pdf">
+                <papertitle>Extended named entity recognition api and its applications in language education</papertitle>
+              </a>
+              <br>
+              Tuan Duc Nguyen, Khai Mai, <strong>Thai-Hoang Pham</strong>, Minh Trung Nguyen, Truc-Vien T Nguyen, Takashi Eguchi, Ryohei Sasano, Satoshi Sekine
+              <br>
+              <em>ACL</em> 2017 <span style="color: red;">(CORE Rank A*)</span> (System Demonstrations) 
+              <br>
+              <br>
+            </td>
+          </tr>
 
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
           <tr>
