--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <br>
               Seungyeon Lee*, <strong>Thai-Hoang Pham</strong>*, Ping Zhang
               <br>
-              <em>ICDM</em> 2022 <span style="color: red;">(CORE Rank A*)</span>
+              <em>ICDM</em> 2022 <a href="http://portal.core.edu.au/conf-ranks/642/"><span style="color: red;">(CORE Rank A*)</span></a>
               <br>
               <a href="https://pth1993.github.io">code</a>
               <br>
@@ -133,7 +133,7 @@
               <br>
               <strong>Thai-Hoang Pham</strong>, Changchang Yin, Laxmi Mehta, Xueru Zhang, Ping Zhang
               <br>
-              <em>ICDM</em> 2021 <span style="color: red;">(CORE Rank A*)</span> (<strong>Best paper candidate</strong>)
+              <em>ICDM</em> 2021 <a href="http://portal.core.edu.au/conf-ranks/642/"><span style="color: red;">(CORE Rank A*)</span></a> (<strong>Best paper candidate</strong>)
               <br>
               <a href="https://github.com/pth1993/MuViTaNet">code</a>
               <br>
