--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <br>
               <strong>Thai-Hoang Pham</strong>, Xueru Zhang, Ping Zhang
               <br>
-              <em>ICLR</em> 2023 <span style="color: red;">(CORE Rank A*)</span>
+              <em>ICLR</em> 2023 <a href="http://portal.core.edu.au/conf-ranks/2273/"><span style="color: red;">(CORE Rank A*)</span></a>
               <br>
               <a href="https://pth1993.github.io">code</a>
               <br>
@@ -112,7 +112,7 @@
               <br>
               <strong>Thai-Hoang Pham</strong>, Lei Xie, Ping Zhang
               <br>
-              <em>SDM</em> 2022 <span style="color: red;">(CORE Rank A)</span>
+              <em>SDM</em> 2022 <a href="http://portal.core.edu.au/conf-ranks/1727/"><span style="color: red;">(CORE Rank A)</span></a>
               <br>
               <a href="https://github.com/pth1993/FAME">code</a>
               <br>
@@ -169,7 +169,7 @@
               <br>
               Khai Mai*, <strong>Thai-Hoang Pham</strong>*, Minh Trung Nguyen, Tuan Duc Nguyen, Danushka Bollegala, Ryohei Sasano, Satoshi Sekine
               <br>
-              <em>COLING</em> 2018 <span style="color: red;">(CORE Rank A)</span>
+              <em>COLING</em> 2018 <a href="http://portal.core.edu.au/conf-ranks/949/"><span style="color: red;">(CORE Rank A)</span></a>
               <br>
               <br>
             </td>
@@ -183,7 +183,7 @@
               <br>
               Tuan Duc Nguyen, Khai Mai, <strong>Thai-Hoang Pham</strong>, Minh Trung Nguyen, Truc-Vien T Nguyen, Takashi Eguchi, Ryohei Sasano, Satoshi Sekine
               <br>
-              <em>ACL</em> 2017 <span style="color: red;">(CORE Rank A*)</span> (System Demonstrations) 
+              <em>ACL</em> 2017 <a href="http://portal.core.edu.au/conf-ranks/196/"><span style="color: red;">(CORE Rank A*)</span></a> (System Demonstrations) 
               <br>
               <br>
             </td>
