--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <td width="100%" valign="middle">
               <heading>Research</heading>
               <p>
-              	My research interests are at intersection between machine learning and biomedical domains.
+              	My research interests are trustworthy machine learning (i.e., fairness, robustness, interpretability, causal inference, uncertainty quantification) and its application to biomedical domains (i.e., predictive modeling, drug discovery).
               </p>
             </td>
           </tr>
