--- a/index.html
+++ b/index.html
@@ -234,16 +234,10 @@
                 Advisory Board member: Heliyon.
               </p>
               <p>
-                Program Committee member: KDD 2023, IJCAI 2023, AISTATS 2023, SDM 2023, ICDM 2022, XAI-Health 2022.
+                Program Committee member: ICLR (2024), NeurIPS (2023), KDD (2023), IJCAI (2023), AISTATS (2023, 2024), SDM (2023, 2024), ICDM (2022, 2023).
               </p>
               <p>
                 Journal reviewer: Heliyon, Bioinformatics, Scientific Reports, Artificial Intelligence in Medicine, IEEE Journal of Biomedical and Health Informatics.
-              </p>
-              <p>
-                Conference sub reviewer: AAAI, IJCAI, KDD, ICDM, SDM, ICML, ICLR, NeurIPS.
-              </p>
-              <p>
-                Journal sub reviewer: Pattern Recognition.
               </p>
             </td>
           </tr>
