--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <p align="center">
                 <name>Thai-Hoang Pham</name>
               </p>
-              <p>I am a fifth-year PhD student at <a href="https://cse.osu.edu/"> Department of Computer Science and Engineering, The Ohio State University (OSU)</a> supervised by Prof. <a href="https://web.cse.ohio-state.edu/~zhang.10631/">Ping Zhang</a>. Before coming to OSU, I received my bachelor's degree from FPT University, where I was supervised by Dr. <a href="http://mim.hus.vnu.edu.vn/en/staff/phuonglh">Phuong Le-Hong</a>.
+              <p>I am a PhD candidate at <a href="https://cse.osu.edu/"> Department of Computer Science and Engineering, The Ohio State University (OSU)</a> supervised by Prof. <a href="https://web.cse.ohio-state.edu/~zhang.10631/">Ping Zhang</a>. Before coming to OSU, I received my bachelor's degree from FPT University, where I was supervised by Dr. <a href="http://mim.hus.vnu.edu.vn/en/staff/phuonglh">Phuong Le-Hong</a>.
               </p>
               <p> Email: pham dot 375 at osu dot edu
               <p align=left>
@@ -59,6 +59,27 @@
           <tr>
             <td width="100%" valign="middle">
               <heading>Selected Publications (*equal contributions)</heading>
+            </td>
+          </tr>
+
+           <tr>
+            <td width="100%" valign="middle">
+              <heading>2024</heading>
+            </td>
+          </tr>
+          
+           <tr onmouseout="porlight_stop()" onmouseover="porlight_start()">
+            <td valign="middle" width="100%">
+              <a href="https://arxiv.org/pdf/2405.06816">
+                <papertitle>Nonstationary Domain Generalization: Theory and Algorithm</papertitle>
+              </a>
+              <br>
+              <strong>Thai-Hoang Pham</strong>, Xueru Zhang, Ping Zhang
+              <br>
+              <em>UAI</em> 2024 <a href="https://portal.core.edu.au/conf-ranks/346/"><span style="color: red;">(CORE Rank A*)</span></a>
+              <br>
+              <a href="https://pth1993.github.io">code</a>
+              <br>
             </td>
           </tr>
           
