--- a/index.html
+++ b/index.html
@@ -103,6 +103,21 @@
               <br>
             </td>
           </tr>
+
+          <tr onmouseout="porlight_stop()" onmouseover="porlight_start()">
+            <td valign="middle" width="100%">
+              <a href="https://link.springer.com/article/10.1007/s10115-022-01813-2">
+                <papertitle>A fair and interpretable network for clinical risk prediction: A regularized multi-view multi-task learning approach</papertitle>
+              </a>
+              <br>
+              <strong>Thai-Hoang Pham</strong>, Changchang Yin, Laxmi Mehta, Xueru Zhang, Ping Zhang
+              <br>
+              <em>Knowledge and Information Systems</em> <span style="color: red;">(Impact factor: 2.7)</span>
+              <br>
+              <a href="https://github.com/pth1993/MuViTaNet">code</a>
+              <br>
+            </td>
+          </tr>
           
           <tr>
             <td width="100%" valign="middle">
@@ -136,6 +151,21 @@
               <em>SDM</em> 2022 <a href="http://portal.core.edu.au/conf-ranks/1727/"><span style="color: red;">(CORE Rank A)</span></a>
               <br>
               <a href="https://github.com/pth1993/FAME">code</a>
+              <br>
+            </td>
+          </tr>
+
+          <tr onmouseout="porlight_stop()" onmouseover="porlight_start()">
+            <td valign="middle" width="100%">
+              <a href="https://www.cell.com/patterns/fulltext/S2666-3899(22)00014-9">
+                <papertitle>Chemical-induced gene expression ranking and its application to pancreatic cancer drug repurposing</papertitle>
+              </a>
+              <br>
+              <strong>Thai-Hoang Pham</strong>, Yue Qiu, Jiahui Liu, Steven Zimmer, Eric O'Neill, Lei Xie, Ping Zhang
+              <br>
+              <em>Patterns</em> <span style="color: red;">(Impact factor: 2.7)</span>
+              <br>
+              <a href="https://github.com/pth1993/CIGER">code</a>
               <br>
             </td>
           </tr>
