--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <p align="center">
                 <name>Thai-Hoang Pham</name>
               </p>
-              <p>I am a PhD candidate at <a href="https://cse.osu.edu/"> Department of Computer Science and Engineering, The Ohio State University (OSU)</a> supervised by Prof. <a href="https://web.cse.ohio-state.edu/~zhang.10631/">Ping Zhang</a>. Before coming to OSU, I received my bachelor's degree from FPT University, where I was supervised by Dr. <a href="http://mim.hus.vnu.edu.vn/en/staff/phuonglh">Phuong Le-Hong</a>.
+              <p>I am a PhD candidate at <a href="https://cse.osu.edu/"> Department of Computer Science and Engineering, The Ohio State University (OSU)</a> supervised by Prof. <a href="https://www.pingzhang.net/">Ping Zhang</a>. Before coming to OSU, I received my bachelor's degree from FPT University, where I was supervised by Dr. <a href="http://mim.hus.vnu.edu.vn/en/staff/phuonglh">Phuong Le-Hong</a>.
               </p>
               <p> Email: pham dot 375 at osu dot edu
               <p align=left>
@@ -244,6 +244,9 @@
           <tr>
             <td width="100%" valign="middle">
               <heading>Awards</heading>
+              <p>
+                UAI Scholarship, UAI 2024.
+              </p>
               <p>
                 Top reviewer, AISTATS 2023.
               </p>
