--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
               <br>
               <strong>Thai-Hoang Pham</strong>, Yue Qiu, Jiahui Liu, Steven Zimmer, Eric O'Neill, Lei Xie, Ping Zhang
               <br>
-              <em>Patterns</em> <span style="color: red;">(Impact factor: 2.7)</span>
+              <em>Patterns</em> <strong>(Cell Press)</strong> <span style="color: red;">(Impact factor: 6.7)</span>
               <br>
               <a href="https://github.com/pth1993/CIGER">code</a>
               <br>
