--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <br>
               <strong>Thai-Hoang Pham</strong>, Xueru Zhang, Ping Zhang
               <br>
-              <em>UAI</em> 2024 <a href="https://portal.core.edu.au/conf-ranks/346/"><span style="color: red;">(CORE Rank A*)</span></a>
+              <em>UAI</em> 2024 <a href="https://portal.core.edu.au/conf-ranks/346/"><span style="color: red;">(CORE Rank A)</span></a>
               <br>
               <a href="https://pth1993.github.io">code</a>
               <br>
