--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
               <br>
               <strong>Thai-Hoang Pham</strong>, Yue Qiu, Jucheng Zeng, Lei Xie, Ping Zhang
               <br>
-              <em>Nature Machine Intelligence</em> <strong>(Nature Portfolio)</strong>strong> <span style="color: red;">(Impact factor: 25.898)</span>
+              <em>Nature Machine Intelligence</em> <strong>(Nature Portfolio)</strong> <span style="color: red;">(Impact factor: 25.898)</span>
               <br>
               <a href="https://github.com/pth1993/DeepCE">code</a>
               <br>
