--- a/index.html
+++ b/index.html
@@ -62,6 +62,42 @@
             </td>
           </tr>
 
+          <tr>
+            <td width="100%" valign="middle">
+              <heading>2025</heading>
+            </td>
+          </tr>
+          
+           <tr onmouseout="porlight_stop()" onmouseover="porlight_start()">
+            <td valign="middle" width="100%">
+              <a href="https://pth1993.github.io">
+                <papertitle>Open-Set Heterogeneous Domain Adaptation: Theoretical Analysis and Algorithm</papertitle>
+              </a>
+              <br>
+              <strong>Thai-Hoang Pham</strong>, Yuanlong Wang, Changchang Yin, Xueru Zhang, Ping Zhang
+              <br>
+              <em>AAAI</em> 2025 <a href="https://portal.core.edu.au/conf-ranks/1629/"><span style="color: red;">(CORE Rank A*)</span></a>
+              <br>
+              <a href="https://pth1993.github.io">code</a>
+              <br>
+            </td>
+          </tr>
+
+          <tr onmouseout="porlight_stop()" onmouseover="porlight_start()">
+            <td valign="middle" width="100%">
+              <a href="https://pth1993.github.io">
+                <papertitle>SepsisCalc: Integrating Clinical Calculators into Early Sepsis Prediction via Dynamic Temporal Graph Construction</papertitle>
+              </a>
+              <br>
+              Changchang Yin, Shihan Fu, Bingsheng Yao, <strong>Thai-Hoang Pham</strong>, Weidan Cao, Dakuo Wang, Jeffrey M Caterino, Ping Zhang
+              <br>
+              <em>KDD</em> 2025 (Applied Data Science Track) <a href="https://portal.core.edu.au/conf-ranks/26/"><span style="color: red;">(CORE Rank A*)</span></a>
+              <br>
+              <a href="https://pth1993.github.io">code</a>
+              <br>
+            </td>
+          </tr>
+
            <tr>
             <td width="100%" valign="middle">
               <heading>2024</heading>
