--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           
            <tr onmouseout="porlight_stop()" onmouseover="porlight_start()">
             <td valign="middle" width="100%">
-              <a href="https://pth1993.github.io">
+              <a href="https://arxiv.org/pdf/2412.13036">
                 <papertitle>Open-Set Heterogeneous Domain Adaptation: Theoretical Analysis and Algorithm</papertitle>
               </a>
               <br>
@@ -78,7 +78,7 @@
               <br>
               <em>AAAI</em> 2025 <a href="https://portal.core.edu.au/conf-ranks/1629/"><span style="color: red;">(CORE Rank A*)</span></a>
               <br>
-              <a href="https://pth1993.github.io">code</a>
+              <a href="https://github.com/pth1993/OSHeDA">code</a>
               <br>
             </td>
           </tr>
