--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
               <p align="center">
                 <name>Thai-Hoang Pham</name>
               </p>
-              <p>I am a PhD candidate at <a href="https://cse.osu.edu/"> Department of Computer Science and Engineering, The Ohio State University (OSU)</a> supervised by Prof. <a href="https://www.pingzhang.net/">Ping Zhang</a>. Before coming to OSU, I received my bachelor's degree from FPT University, where I was supervised by Dr. <a href="http://mim.hus.vnu.edu.vn/en/staff/phuonglh">Phuong Le-Hong</a>.
+              <p>
+                I am a Ph.D. candidate in the <a href="https://cse.osu.edu/"> Department of Computer Science and Engineering</a> at <a href="https://osu.edu/">The Ohio State University</a> (OSU), advised by Dr. <a href="https://www.pingzhang.net/">Ping Zhang</a> in the Artificial Intelligence in Medicine (AIMed) lab. Before coming to OSU, I received my bachelor's degree from FPT University, where I was supervised by Dr. <a href="http://mim.hus.vnu.edu.vn/en/staff/phuonglh">Phuong Le-Hong</a>. My research focuses on the intersection of machine learning (ML), trustworthy AI and their applications to healthcare and biomedicine. 
+                I’m mainly interested in developing robust and equitable AI/ML models for clinical decision-making and drug discovery. My work has been published in top-tier AI/ML venues, including \textit{Nature Machine Intelligence}, \textit{Patterns}, AAAI, ICLR, UAI, ICDM and SDM. My research has been featured in Nature Machine Intelligence, Ohio State News, ReachMD, Technology Networks, DeepLearning.AI, etc.
               </p>
               <p> Email: pham dot 375 at osu dot edu
               <p align=left>
@@ -280,6 +282,12 @@
           <tr>
             <td width="100%" valign="middle">
               <heading>Awards</heading>
+              <p>
+                Graduate Student Research Award, Department of Computer Science and Engineering, The Ohio State University, 2025.
+              </p>
+              <p>
+                Exemplary Graduate Student Researcher, College on Engineering, The Ohio State University, 2025.
+              </p>
               <p>
                 UAI Scholarship, UAI 2024.
               </p>
