--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
               </p>
               <p>
                 I am a Ph.D. candidate in the <a href="https://cse.osu.edu/"> Department of Computer Science and Engineering</a> at <a href="https://osu.edu/">The Ohio State University</a> (OSU), advised by Dr. <a href="https://www.pingzhang.net/">Ping Zhang</a> in the Artificial Intelligence in Medicine (AIMed) lab. Before coming to OSU, I received my bachelor's degree from FPT University, where I was supervised by Dr. <a href="http://mim.hus.vnu.edu.vn/en/staff/phuonglh">Phuong Le-Hong</a>. My research focuses on the intersection of machine learning (ML), trustworthy AI and their applications to healthcare and biomedicine. 
-                I’m mainly interested in developing robust and equitable AI/ML models for clinical decision-making and drug discovery. My work has been published in top-tier AI/ML venues, including \textit{Nature Machine Intelligence}, \textit{Patterns}, AAAI, ICLR, UAI, ICDM and SDM. My research has been featured in Nature Machine Intelligence, Ohio State News, ReachMD, Technology Networks, DeepLearning.AI, etc.
               </p>
               <p> Email: pham dot 375 at osu dot edu
               <p align=left>
@@ -51,7 +50,7 @@
             <td width="100%" valign="middle">
               <heading>Research</heading>
               <p>
-              	My research interests are trustworthy machine learning (i.e., fairness, robustness, interpretability, causal inference, uncertainty quantification) and its application to biomedical domains (i.e., predictive modeling, drug discovery).
+              	I’m mainly interested in developing robust and equitable AI/ML models for clinical decision-making and drug discovery. My work has been published in top-tier AI/ML venues, including Nature Machine Intelligence, AAAI, ICLR, UAI, KDD, ICDM and SDM. My research has been featured in Nature Machine Intelligence, Ohio State News, ReachMD, Technology Networks, DeepLearning.AI, etc.
               </p>
             </td>
           </tr>
