--- a/index.html
+++ b/index.html
@@ -288,6 +288,9 @@
                 Exemplary Graduate Student Researcher, College on Engineering, The Ohio State University, 2025.
               </p>
               <p>
+                AAAI Scholarship, AAAI 2025.
+              </p>
+              <p>
                 UAI Scholarship, UAI 2024.
               </p>
               <p>
