--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </td>
           </tr>
           
-           <tr onmouseout="porlight_stop()" onmouseover="porlight_start()">
+          <tr onmouseout="porlight_stop()" onmouseover="porlight_start()">
             <td valign="middle" width="100%">
               <a href="https://arxiv.org/pdf/2412.13036">
                 <papertitle>Open-Set Heterogeneous Domain Adaptation: Theoretical Analysis and Algorithm</papertitle>
@@ -80,6 +80,36 @@
               <em>AAAI</em> 2025 <a href="https://portal.core.edu.au/conf-ranks/1629/"><span style="color: red;">(CORE Rank A*)</span></a>
               <br>
               <a href="https://github.com/pth1993/OSHeDA">code</a>
+              <br>
+            </td>
+          </tr>
+
+          <tr onmouseout="porlight_stop()" onmouseover="porlight_start()">
+            <td valign="middle" width="100%">
+              <a href="https://pth1993.github.io">
+                <papertitle>Integrating Biological Knowledge for Robust Microscopy Image Profiling on De Novo Cell Lines</papertitle>
+              </a>
+              <br>
+              Jiayuan Chen*, <strong>Thai-Hoang Pham</strong>*, Yuanlong Wang, Ping Zhang
+              <br>
+              <em>ICCV</em> 2025 <a href="https://portal.core.edu.au/conf-ranks/638/"><span style="color: red;">(CORE Rank A*)</span></a>
+              <br>
+              <a href="https://pth1993.github.io">code</a>
+              <br>
+            </td>
+          </tr>
+
+          <tr onmouseout="porlight_stop()" onmouseover="porlight_start()">
+            <td valign="middle" width="100%">
+              <a href="https://pth1993.github.io">
+                <papertitle>Domain Invariant Representation Learning and Sleep Dynamics Modeling for Automatic Sleep Staging</papertitle>
+              </a>
+              <br>
+              Seungyeon Lee*, <strong>Thai-Hoang Pham</strong>*, Zhao Cheng, Ping Zhang
+              <br>
+              <em>ACM Transactions on Computing for Healthcare</em> <span style="color: red;">(Impact factor: 8.0)</span>
+              <br>
+              <a href="https://pth1993.github.io">code</a>
               <br>
             </td>
           </tr>
