--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <br>
               <em>ICCV</em> 2025 <a href="https://portal.core.edu.au/conf-ranks/638/"><span style="color: red;">(CORE Rank A*)</span></a>
               <br>
-              <a href="https://pth1993.github.io">code</a>
+              <a href="https://github.com/The-Real-JerryChen/BioMicroscopyProfiler">code</a>
               <br>
             </td>
           </tr>
@@ -275,7 +275,7 @@
           
           <tr>
             <td width="100%" valign="middle">
-              <heading>2018 and before </heading>
+              <heading>Before PhD Study</heading>
             </td>
           </tr>
 
